[workspace]
members  = ["bevy-trait-query", "bevy-trait-query-impl"]
resolver = "3"

[workspace.package]
categories = ["game-development"]
edition    = "2024"
keywords   = ["bevy", "gamedev", "plugin", "query", "trait"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/JoJoJet/bevy-trait-query/"

[workspace.dependencies]
bevy_app = { version = "0.17.2" }
bevy_ecs = { version = "0.17.2" }
tracing  = { version = "0.1.41" }

# proc macro
bevy-trait-query-impl = { path = "./bevy-trait-query-impl", version = "0.17.2" }
proc-macro-crate      = { version = "3.4.0" }
proc-macro2           = { version = "1.0.103" }
quote                 = { version = "1.0.42" }
syn                   = { features = ["full"], version = "2.0.110" }

# dev deps
criterion = { version = "0.7.0" }
bevy = { version = "0.17.2", default-features = false }
